--- a/config/database.yml
+++ b/config/database.yml
@@ -13,18 +13,18 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   charset:   utf8mb4
+  username: root
+  password: admin
+  host: localhost
   collation: utf8mb4_general_ci
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  host: localhost
   variables:
     sql_mode: 'STRICT_ALL_TABLES'
-    tx_isolation: 'READ-COMMITTED'
 
 development:
   <<: *default
   database: practice_spec_development
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
