--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
            DATABASE_URL: 'mysql2://root@127.0.0.1:3306/test'
            CIRCLE_TEST_REPORTS: '/tmp/test-results'
            TZ: Asia/Tokyo
+           BUNDLER_VERSION: 2.0.1
        - image: circleci/mysql:5.7
          environment:
            MYSQL_ALLOW_EMPTY_PASSWORD: yes
